Fix minor layout issue with Github Enterprise

--- a/src/adapters/github.less
+++ b/src/adapters/github.less
@@ -191,3 +191,7 @@
     }
   }
 }
+
+header > div.container-lg {
+  max-width: none;
+}
